src/manifests/retriever/03-deployment-retriever.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retriever
  namespace: inference
  labels:
    app.kubernetes.io/name: retriever
    app.kubernetes.io/instance: retriever
    app.kubernetes.io/managed-by: retriever-manifest-generator
    app.kubernetes.io/component: retriever
  annotations:
    retriever.io/config-sha256: b881a38e56eac61b5fda6d4c36f540115765e6d751cb6ca919dff55042a35470
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: retriever
      app.kubernetes.io/instance: retriever
      app.kubernetes.io/component: retriever
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retriever
        app.kubernetes.io/instance: retriever
        app.kubernetes.io/managed-by: retriever-manifest-generator
        app.kubernetes.io/component: retriever
        app.kubernetes.io/part-of: retriever
      annotations:
        retriever.io/config-sha256: b881a38e56eac61b5fda6d4c36f540115765e6d751cb6ca919dff55042a35470
    spec:
      serviceAccountName: retriever-sa
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: retriever
        image: ghcr.io/athithya-sakthivel/retriever:2026-05-01-07-15--813f3ab@sha256:2fff10a209f9f622c66d549b4c7e496444935299f170a896ce15980f8f4019cf
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 12
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 12
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 12
          successThreshold: 1
