src/manifests/retriever/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retriever
  namespace: inference
  labels:
    app.kubernetes.io/name: retriever
    app.kubernetes.io/instance: retriever
    app.kubernetes.io/managed-by: retriever-manifest-generator
    app.kubernetes.io/component: retriever
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: retriever
      app.kubernetes.io/instance: retriever
      app.kubernetes.io/component: retriever
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retriever
        app.kubernetes.io/instance: retriever
        app.kubernetes.io/managed-by: retriever-manifest-generator
        app.kubernetes.io/component: retriever
        app.kubernetes.io/part-of: retriever
    spec:
      serviceAccountName: retriever-sa
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: retriever
        image: ghcr.io/athithya-sakthivel/retriever:2026-05-09-19-30--549023f@sha256:987f51e93d1c4261a98d9498e25124faef85f284770e14c63b19fe8d8f270448
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: tmp
          mountPath: /var/tmp
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 60
          successThreshold: 1
