src/manifests/retriever/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retriever
  namespace: inference
  labels:
    app.kubernetes.io/name: retriever
    app.kubernetes.io/instance: retriever
    app.kubernetes.io/managed-by: retriever-manifest-generator
    app.kubernetes.io/component: retriever
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: retriever
      app.kubernetes.io/instance: retriever
      app.kubernetes.io/component: retriever
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retriever
        app.kubernetes.io/instance: retriever
        app.kubernetes.io/managed-by: retriever-manifest-generator
        app.kubernetes.io/component: retriever
        app.kubernetes.io/part-of: retriever
    spec:
      serviceAccountName: retriever-sa
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: retriever
        image: ghcr.io/athithya-sakthivel/retriever:2026-05-03-13-29--d13b057@sha256:2b4bb7f34c57db45e4241576951d43195f286bcdddf4f321fcd28b629ba72a3f
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: tmp
          mountPath: /var/tmp
        - name: tmp
          mountPath: /usr/tmp
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 6
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /healthz
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 60
          successThreshold: 1
